# nodogsplash

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Config.in  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.html  README.md  UGB.txt  aclocal.m4  bin-voucher.rst  build_libmicrohttpd.sh  check-interval.rst  config.h.in  configure  configure.in  debian-specific.patch  ext-gateway.rst  hosts.offline  nodogsplash.conf  nodogsplash.spec.in  proxy-ssl.rst
.github/workflows/: cd.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
config/: mkinstalldirs
debian/: README.md  README.source  changelog  control  copyright  nodogsplash.links  nodogsplash.manpages  nodogsplash.service  rules
debian/doc/: nodogsplash.1
doc/: Makefile.in
docs/: Makefile
docs/source/: authentication.rst  binauth.rst  binvoucher.rst  checkinterval.rst  compile.rst  conf.py  customize.rst  debug.rst  dnsspoofing.rst  faq.rst  fas.rst  howitworks.rst  index.rst  install.rst  libraries.rst  ndsctl.rst  overview.rst  preauth.rst  splash.rst  splashpage.rst  todo.rst  traffic.rst
forward_authentication_service/: readme
forward_authentication_service/FAS-Docs/: readme
forward_authentication_service/PreAuth/: demo-preauth-remote-image.sh  demo-preauth.sh
forward_authentication_service/binauth/: binauth_log.sh  binauth_sitewide.sh  splash_sitewide.html
forward_authentication_service/etc/config/: nodogsplash
forward_authentication_service/etc/nodogsplash/htdocs/: infoskel.html  splash.html
forward_authentication_service/fas-aes/: fas-aes-https.php  fas-aes.php
forward_authentication_service/fas-hid/: fas-hid.php
forward_authentication_service/libs/: authmon.sh  get_client_interface.bash  get_client_interface.sh  get_client_token.bash  get_client_token.sh  post-request.php  unescape.bash  unescape.sh
forward_authentication_service/nodog/: css.php  fas.php  landing.php  oops-ndsv2.php  querycheck.php  tos.php
htdocs/: infoskel.html.~1~  splash.html.~1~
ipkg/: nodogsplash.conffiles  nodogsplash.control  rules
libhttpd/: Makefile.am  Makefile.in  README  api.c  config.h  httpd.h  httpd_priv.h  ip_acl.c  protocol.c  version.c
notes/: release_todos  todo.md
openwrt/: README.md  readme
openwrt/nodogsplash/: Makefile  UGB.txt
openwrt/nodogsplash/files/: nodogsplash.config  nodogsplash.init  nodogsplash.migrate
openwrt/nodogsplash/files/etc/config/: nodogsplash  nodogsplash-ori
openwrt/nodogsplash/files/etc/init.d/: nodogsplash
openwrt/nodogsplash/files/usr/lib/nodogsplash/: restart.sh  unescape.sh
resources/: build_libmicrohttpd.sh  infoskel.html  ndstoken  nodogsplash.conf  splash.css  splash.html  status.html
resources/test_environment/: README.md  nds_test_environment.sh
scripts/.svn/: all-wcprops  entries
scripts/init.d/: S65nodogsplash  S65nodogsplash.~1~  S65nodogsplash.~5~  S65nodogsplash.~7~
scripts/init.d/.svn/: all-wcprops  entries
scripts/init.d/.svn/text-base/: wifidog.svn-base
scripts/openwrt/.svn/: all-wcprops  entries
scripts/openwrt/.svn/text-base/: S65wifidog.svn-base
src/: Makefile.am  Makefile.in  UGB.txt  auth.c  auth.h  client_list.c  client_list.h  commandline.c  commandline.h  common.h  conf.c  conf.h  debug.c  debug.h  fakedns_thread.c  fakedns_thread.h  firewall.c  firewall.h  fw_abstract.c  fw_abstract.h  fw_common.c  fw_common.h  fw_iptables.c  fw_iptables.h  fw_nftables.c  fw_nftables.h  gateway.c  gateway.h  http.c  http.h  http_microhttpd.c  http_microhttpd.h  http_microhttpd_utils.c  http_microhttpd_utils.h  httpd_handler.c  httpd_handler.h  httpd_thread.c  httpd_thread.h  main.c  main.h  (+20 more)
tests/: Makefile
tests/state_file/: .gitignore  Makefile  inval.json  mini.json  missing_clients.json  missing_name.json  missing_version.json  one_client.json  one_client_missing_counter.json  one_client_no_counter.json  other_name.json  other_version.json  test_state_file.c  three_clients.json  three_clients_dup_id.json  three_clients_dup_ip.json  three_clients_dup_mac.json
tests/utils/: Makefile  empty_table.arp  huge_table.arp  one_entry.arp  test_utils.c
